configuration, greetings controller added.

--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=config-server
 server.port=8888
 
-message.greeting="Hello from the Config Server!"
+E-COM.configuration.greetings.message = "Hello from the Config Server!"
